fixed overlapping of store detail columns on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1079,11 +1079,18 @@ header.subpage-header{
   padding: 30px;
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
   width: 100%;
 }
 
 .store-details>div:nth-child(1) {
-  width: 60%;
+  width: 50%;
+  padding-right: 20px;
+}
+
+.store-details>div:nth-child(1) img {
+  width: 80%;
+  max-width: 200px;
 }
 
 .store-details ul {
@@ -1152,13 +1159,17 @@ header.subpage-header{
   }
 
   .store-details li {
-
     text-align: center;
   }
 
   .store-details>div:nth-child(1) {
     width: 100%;
+    padding-right: 0;
   }
+
+  .store-details>div:nth-child(1) img {
+  width: 100%;
+}
 
 }
 
